# azure_dms_batch

./: .gitattributes  .gitignore  MANIFEST.in  README-architecture.md  README-batch-job-yaml.md  README-batch-yaml-template.md  README-pyproject.md  README-schism-batch-inlineprocessing.md  README-schism-batch.md  README-schism-debug-prototype.md  README-schism-restart-stuck-pool.md  README-script-templates.md  README.md  environment.yml  environment_dev.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
app-packages/: .gitignore  batch_app_package_and_upload.sh
bicep/: dsm2_linux_pool.bicep  import_runbook.sh  pool_autoscaling.txt  schism_alert_logic_app.bicep  schism_alert_workflow.json  schism_terminate_logic_app.bicep  schismpool.bicep  setup_schism_alert.sh
conda.recipe/: meta.yaml
dmsbatch/: __init__.py  _version.py  _version.py.template  application_command_template.sh  batch.py  blob_mount_config_template.yml  cli.py  commands.py  coordination_command_template.sh  mount_blob.py  ptm_fate_merge_np.py  ptm_fate_merge_salmon.py  ptm_fate_postpro_single.py  restart_stuck_pool.py  schism.job.yml  schism_batch_submit.py  schism_custom_image_batch_submit.py  schism_nfs_batch_submit.py  schismbatch.py  schismpool.bicep  schismpool.parameters.json  submit_dsm2hab_batch.py  submit_dsm2habrt_batch.py  submit_ptm_linux_batch_np.py  submit_ptm_linux_batch_salmon.py  submit_ptm_merge.py
docs/: schism_alerting_setup.md  schism_headnode_workflow.md  telegraf_appinsights_setup.md
notebooks/: autoscaling.lowpriority.formulas.txt  sample_batch_monitor.py  (+10 more)
(+203 files in other folders)
